...
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/font_md"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                style="@style/SearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:queryHint="@string/search_hint" />
        </LinearLayout>
...
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp"
                app:chipSpacingHorizontal="8dp"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_popular"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_upcoming"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_latest_release"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_release"
                    android:textAppearance="@style/MyTextAppearance" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_top_rated"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:textAppearance="@style/MyTextAppearance" />
            </com.google.android.material.chip.ChipGroup>
...

                <com.MovieDb.app.core.ui.custom.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_movie"
                        style="@style/RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp" />
                </com.MovieDb.app.core.ui.custom.NestedScrollableHost>
            </FrameLayout>
...

                <com.MovieDb.app.core.ui.custom.NestedScrollableHost
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tv"
                        style="@style/RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="16dp" />
                </com.MovieDb.app.core.ui.custom.NestedScrollableHost>
            </FrameLayout>
...
